# ProjectLaboratory

./: README.md  analyze_results.py  client.py  dataset.py  main.py  model.py  presentation.pptx  pyproject.toml  server.py
conf/: base.yaml
outputs/2024-04-10/03-38-50/.hydra/: hydra.yaml
outputs/2024-04-10/05-15-01/.hydra/: hydra.yaml
outputs/2024-04-10/05-15-12/.hydra/: hydra.yaml
outputs/2024-04-10/05-16-22/.hydra/: hydra.yaml
outputs/2024-04-10/05-21-42/.hydra/: hydra.yaml
outputs/2024-04-10/05-23-50/.hydra/: hydra.yaml
outputs/2024-04-22/10-37-33/.hydra/: hydra.yaml
outputs/2024-04-22/10-41-09/.hydra/: hydra.yaml
outputs/2024-04-22/10-41-26/.hydra/: hydra.yaml
outputs/2024-04-22/11-27-48/: results.pkl
outputs/2024-04-22/13-01-26/: results.pkl
outputs/2024-05-05/13-20-32/: results.pkl
outputs/2024-05-05/21-07-56/: results.pkl
outputs/2024-05-05/22-11-43/: results.pkl
outputs/2024-05-05/22-30-35/: results.pkl
outputs/2024-05-05/22-59-22/: results.pkl
outputs/2024-05-05/23-25-44/: results.pkl
outputs/2024-05-05/23-43-54/: results.pkl
outputs/2024-05-06/06-02-46/: results.pkl
outputs/2024-05-06/06-28-19/: results.pkl
outputs/2024-05-06/06-38-11/: results.pkl
outputs/2024-05-06/07-31-10/: results.pkl
outputs/2024-05-06/07-52-20/: results.pkl
outputs/2024-05-06/07-57-08/: results.pkl
outputs/2024-05-06/12-00-00/: results.pkl
outputs/2024-05-06/15-45-16/: results.pkl
outputs/2024-05-25/18-21-16/: results.pkl
results/: eval_results.json  fit_results.json  global_eval_results.json
(+131 files in other folders)
